# triangulation

./: Graphics.cpp  Graphics.cpp.save  Graphics.h  Graphics.h.save  README.md  SDP.docx  Untitled1.cpp.save  creator.cpp  delanau.cpp  functions.h  input.txt  main.cpp  main_Genrikh.cpp  makefile  test.cpp  triangulation.bmarks  triangulation.cbp  triangulation.depend  triangulation.layout.save  triangulation_build_log.html
Point/: data.txt  point.h  point_test.cpp
add_from_console/: a.out  test_add_from_comsole.cpp
receive_verified/: a.out  file_length.cpp  inctruction_receive_verified().txt  inctruction_receive_verified_thread().txt  point.h  receive_verified_thread.cpp  test_receive_verified.cpp  test_receive_verified_thread.cpp  verified_data.txt
test/: CMakeLists.txt  Graphics.cpp  Graphics.h  a.out  add_from_console.cpp  creator.cpp  get_met_st_location.cpp  point.cpp  point.h  raw_data.txt  receive_verified.cpp  station  test_main.cpp  tringulate
